--- a/src/css/blocks/main.css
+++ b/src/css/blocks/main.css
@@ -1,4 +1,4 @@
 @import "footer/footer.css";
 @import "header/header.css";
-@import "page/page.css";
 @import "title/title.css";
+@import "text/text.css";
