--- a/src/css/blocks/title/title.css
+++ b/src/css/blocks/title/title.css
@@ -2,3 +2,13 @@
 {
     font: 500 42px/1.09 "Euclid Circular B", sans-serif;
 }
+
+.b-title_h2
+{
+    font: 500 36px/1.09 "Euclid Circular B", sans-serif;
+}
+
+.b-title_h2
+{
+    font: 500 28px/1.09 "Euclid Circular B", sans-serif;
+}
