--- a/src/css/page/page.css
+++ b/src/css/page/page.css
@@ -3,3 +3,12 @@
     margin: 0;
     padding: 0;
 }
+
+.container
+{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+}
